[package]
name = "lowkit"
version = "0.0.0"
edition = "2024"
license = "MIT"
description = "lowkit"
repository = "https://github.com/vilicvane/lowkit"

[dependencies]
anyhow = "1"
base64 = "0.22"
hex = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["process", "rt", "sync"] }

[lints.clippy]
collapsible_else_if = "allow"
collapsible_if = "allow"
disallowed_macros = "warn"
module_inception = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
