[package]
name = "lowkit"
version = "0.0.0"
edition = "2024"
license = "MIT"
description = "lowkit"
repository = "https://github.com/vilicvane/lowkit"

[dependencies]
anyhow = "1"
base64 = "0.22"
derive_more = { version = "2", features = ["full"] }
hex = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_regex = "1"
thiserror = "2"
tokio = { version = "1", features = ["process", "rt", "sync"] }

[lints.clippy]
collapsible_else_if = "allow"
collapsible_if = "allow"
disallowed_macros = "warn"
module_inception = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
